--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+:root{
+  --bgColor: rgba(0,0,0,.3)
+}
 * {
   margin: 0;
   padding: 0;
@@ -6,11 +9,9 @@
 }
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  background-image: url(https://images.unsplash.com/photo-1537210249814-b9a10a161ae4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1489&q=80);
+  background-size: cover;
+  background-position: center center;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -20,17 +21,22 @@
 }
 
 main {
-  background-color: #222;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   color: white;
 }
 header{
-  position: absolute;
-  top: 0;
+  padding: 20px;
+  background: var(--bgColor);
+  width: 100%;
+}
+footer{
+  padding: 20px;
+  background: var(--bgColor);
+  width: 100%;
 }
 .App-link {
   color: #61dafb;
@@ -47,10 +53,6 @@ header{
     transform: rotate(360deg);
   }
 }
-.App-footer{
-  /* position: absolute; */
-  /* bottom: 10px; */
-}
 .App-footer img{
   height: 65px;
   width: 65px;
@@ -59,11 +61,13 @@ form{
   position: relative;
   width: fit-content;
   margin: auto;
+  margin: 20px auto;
 }
 label{
   display: block;
   text-align: left;
   margin-bottom: 10px;
+  font-size: 1.5em;
 }
 
 input{
@@ -82,10 +86,6 @@ ul{
 
 li {
   display: block;
-}
-
-.container {
-  margin: 70px 0 20px;
 }
 
 .container .cities {
